--- a/src/todo.txt
+++ b/src/todo.txt
@@ -1,9 +1,10 @@
 dashboard.js frontend
 -remove stock on ebook
--change customer to not editable
+-change customer to not editable, only delete
 -change order to not editable
 -change name to not editable for ebook update
 -change colours to match blue/purple
+--add back button styling
 -insert new ebook function
 -insert new book function
 
